create books tag

--- a/MyBookShopAPP/src/main/resources/frontend/genres/slug.html
+++ b/MyBookShopAPP/src/main/resources/frontend/genres/slug.html
@@ -86,7 +86,8 @@ p.error-browser
                                                                      data-refreshoffset="0"
                                                                      data-refreshlimit="5"
                                                                      data-refreshid="1020"
-                                                                     th:attr="data-refreshid=${slug}">Показать
+                                                                     th:attr="data-refreshid=${slug}"
+                    th:text="#{topbar.showMore}">Показать
                         еще</a>
                     </div>
                 </div>
