--- a/MyBookShopAPP/src/main/resources/frontend/search/index.html
+++ b/MyBookShopAPP/src/main/resources/frontend/search/index.html
@@ -64,31 +64,13 @@ p.error-browser
                     </h2>
                 </header>
                 <div class="Cards Cards_search Cards_refresh">
-                    <div class="Card" th:each="book : ${searchResult}">
-                        <a class="Card-picture" href="/books/slug.html">
-                            <img src="/assets/img/content/main/card.jpg" th:src="${book.image}" alt="card.jpg"/>
-                            <div class="Card-sale" th:with="discount= ${book.discount !=0}"
-                                 th:class="${discount} ? 'Card-sale' : ''"
-                                 th:text="${discount} ? ${book.discount} + #{topbar.discount}">
-                            </div>
-                            <div class="Card-ribbon">
-                                <span class="Card-ribbonText" th:text="${book.isBestseller != 0} ? #{topbar.bestseller}">Бестселлер</span>
-                            </div>
-                        </a>
-                        <div class="Card-content">
-                            <strong class="Card-title">
-                                <a href="/books/slug.html" th:text="${book.title}">Техника</a>
-                            </strong>
-                            <div class="Card-description" th:text="${book.getAuthors}">Кондратенко Валерий Петрович
-                            </div>
-                            <div class="Card-cost" th:with="price=${book.getDiscountPrice!=0}? ${book.getDiscountPrice}:null">
-                        <span class="Card-priceOld" th:class="${price == null} ? 'Card price' : 'Card-priceOld'"
-                              th:text="${book.getPrice}">₽300.00</span>
-                                <span class="Card-price" th:text="${price} ?: ''">₽190.00</span>
-                            </div>
+                    <th:block th:each="book : ${searchResult}">
+                        <div class="Card" th:replace="~{fragments/books_pool_fragment::booksCard}">
                         </div>
-                    </div>
-                    <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#"
+
+                    </th:block>
+                </div>
+            <div class="Cards-footer Cards-footer_center"><a class="btn btn_primary" href="#"
                                                                      data-refreshshow="search"
                                                                      data-refreshoffset="0"
                                                                      data-refreshlimit="5"
