--- a/MyBookShopAPP/src/main/resources/frontend/books/slug.html
+++ b/MyBookShopAPP/src/main/resources/frontend/books/slug.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/assets/css/basic.min.css?v=87821122">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/assets/css/extra.min.css?v=87821122">
+    <link rel="stylesheet" href="/assets/css/DownloadBookWindowStyle.css">
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <script defer src="/assets/js/scripts.min.js?v=87821122"></script>
@@ -69,7 +70,7 @@ p.error-browser
                                      src="/assets/img/content/main/card.jpg"
                                      alt="card.jpg"/>
                             </div>
-                            <input type="file" name="file" id="dialog" style="display: none"/>
+                            <input type="file" name="file" id="dialog" style="display: none" accept="image/*"/>
                         </form>
                     </div>
                     <div class="ProductCard-desc">
@@ -77,7 +78,7 @@ p.error-browser
                             <h1 class="ProductCard-title" th:text="${slugBook.title}">Мара и морок
                             </h1>
                             <div class="ProductCard-author"><span class="ProductCard-titleProp">Автор:</span>&#32;<a
-                                    href="#" th:text="${slugBook.authors}">Лия Арден</a>
+                                    href="#" th:text="${slugBook.author}">Лия Арден</a>
                             </div>
                             <div class="ProductCard-rating"><span class="ProductCard-titleProp">Рейтинг:</span>
                                 <button class="trigger trigger_dropdown" type="button">
@@ -393,11 +394,23 @@ p.error-browser
                         </svg></span>
                       <input name="rating" type="radio" value="5"/></span></span>
                             </div>
-                            <div class="ProductCard-tags"><span class="ProductCard-titleProp">Тэги:</span><a
-                                    href="/tags/">Современные</a>,&#32;<a href="/tags/">Психологическая проза</a>
+                            <div class="ProductCard-tags">
+                                <span class="ProductCard-titleProp">Тэги:</span>
+                                <th:block th:each="tag,state:${slugBook.getTags()}">
+                                    <a href="/tags/"
+                                       th:href="${'/tags/'+ tag.key}"
+                                       th:text="${tag.value}">Современные</a>
+                                    <span th:if="${!state.last}">,&#32;</span>
+                                </th:block>
+
                             </div>
-                            <div class="ProductCard-cost"><span class="ProductCard-titleProp">Цена:</span><span
-                                    class="ProductCard-priceOld">₽300</span><span class="ProductCard-price">₽180</span>
+                            <div class="ProductCard-cost">
+                                <span class="ProductCard-titleProp">Цена:</span>
+                                <span class="ProductCard-priceOld"
+                                      th:class="${slugBook.discountPrice==0} ? 'ProductCard-price':'ProductCard-priceOld'"
+                                      th:text="${slugBook.price}">₽300</span>
+                                <span class="ProductCard-price" th:if="${slugBook.discountPrice!=0}"
+                                      th:text="${slugBook.discountPrice}">₽180</span>
                             </div>
                             <!--+div.-info
                             //+div.-cost
@@ -409,7 +422,7 @@ p.error-browser
                             -->
                         </div>
                         <div class="ProductCard-text">
-                            <p>Таких, как я, называют Марами - отмеченными самой богиней смерти Мораной. Когда-то у меня
+                            <p th:text="${slugBook.description}">Таких, как я, называют Марами - отмеченными самой богиней смерти Мораной. Когда-то у меня
                                 и моих шести сестер был свой путь. Тогда люди нас уважали и просили о милосердии. Они
                                 приносили нам подношения и молились нам. Но 200 лет назад все изменилось, когда принц
                                 Серата осмелился поднять руку на одну из нас. Я пыталась отомстить, но погибли мы все.
@@ -454,6 +467,15 @@ p.error-browser
                                         class="btn-content">В архив</span>
                                 </button>
                             </div>
+                            <div id="myPopup">
+                                <p>Ссылки для скачивания</p>
+                                <div th:each="bookFile:${slugBook.bookFileList}">
+                                    <a href="#" th:href="${'/books/download/' + bookFile.getHash()}"
+                                       th:text="${bookFile.getFileTypeExtension()}"></a>
+                                </div>
+                                <span id="myPopup_close" class="close">❎</span>
+                            </div>
+                            <div id="myOverlay"></div>
                         </div>
                         <!--+div.-cart-->
                         <!--    //+div.-cartElement.-cartElement_amount-->
@@ -763,6 +785,7 @@ p.error-browser
 </footer>
 <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
 <script src="/assets/js/UploadNewBookImageScript.js"></script>
+<script src="/assets/js/DownloadBookWindowScript.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
