--- a/MyBookShopAPP/src/main/resources/frontend/postponed.html
+++ b/MyBookShopAPP/src/main/resources/frontend/postponed.html
@@ -18,7 +18,7 @@
   <!--meta( http-equiv="cache-control" content="no-cache")-->
   <!--meta( http-equiv="expires" content="0")-->
   <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
-  <link href="favicon.ico" rel="shortcut icon">
+  <link href="../favicon.ico" rel="shortcut icon">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
@@ -46,16 +46,20 @@
       <main class="Middle-main">
         <h1 class="Middle-title">Отложенное
         </h1>
+        <h3 th:if="${isPostponedEmpty}">Жаль, что Вам ничего не понравилось 🥺</h3>
         <form class="form Cart Cart_postponed" action="#" method="post">
-          <div class="Cart-product">
+          <div class="Cart-product" th:each="book:${postponedBook.getBooks()}">
             <div class="Cart-block Cart-block_row">
-              <div class="Cart-block Cart-block_pict"><a class="Cart-pict" href="#"><img class="Cart-img" src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
+              <div class="Cart-block Cart-block_pict"><a class="Cart-pict" href="#">
+                <img class="Cart-img"
+                     th:src="${book.image}"
+                     src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
               </div>
               <div class="Cart-block Cart-block_row">
                 <div class="Cart-block Cart-block_info">
-                  <div class="Cart-author"><a href="#">Борис Васильевич Бедный</a>
+                  <div class="Cart-author"><a href="#" th:text="${book.authors}">Борис Васильевич Бедный</a>
                   </div>
-                  <div class="Cart-title"><a href="#">Жизнь</a>
+                  <div class="Cart-title"><a href="#" th:text="${book.title}">Жизнь</a>
                   </div>
                   <div class="Cart-rating"><span class="Rating"><span class="Rating-stars"><span class="Rating-star Rating-star_view">
                           <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
@@ -96,11 +100,19 @@
                   </div>
                   <div class="Cart-buttons">
                     <div class="Cart-btn">
-                      <button class="btn btn_primary btn_outline" data-sendstatus="CART" data-bookid="[1122]"><span class="btn-icon"><img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></span><span class="btn-content">Купить</span>
+                      <button class="btn btn_primary btn_outline" data-sendstatus="CART"
+                              th:attr="data-bookid=${'postponed/cart/'+book.slug}"
+                              data-bookid="[1122]">
+                        <span class="btn-icon"><img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></span>
+                        <span class="btn-content">Купить</span>
                       </button>
                     </div>
                     <div class="Cart-btn">
-                      <button class="btn btn_danger btn_outline" data-sendstatus="UNLINK" data-bookid="[1122]"><span class="btn-icon"><img src="/assets/img/icons/trash.svg" alt="trash.svg"/></span><span class="btn-content">Удалить</span>
+                      <button class="btn btn_danger btn_outline" data-sendstatus="UNLINK"
+                              th:attr="data-bookid=${'postponed/remove/'+book.slug}"
+                              data-bookid="[1122]">
+                        <span class="btn-icon"><img src="/assets/img/icons/trash.svg" alt="trash.svg"/></span>
+                        <span class="btn-content">Удалить</span>
                       </button>
                     </div>
                   </div>
@@ -108,149 +120,13 @@
                 <div class="Cart-block Cart-block_price">
                   <div class="Cart-priceTitle">Цена:
                   </div>
-                  <div class="Cart-price">254 р.
+                  <div class="Cart-price Cart-price_old"
+                       th:class="${book.discountPrice==0} ? 'Cart-price':'Cart-price Cart-price_old'"
+                       th:text="${book.price}">150 р.
                   </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="Cart-product">
-            <div class="Cart-block Cart-block_row">
-              <div class="Cart-block Cart-block_pict"><a class="Cart-pict" href="#"><img class="Cart-img" src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-              </div>
-              <div class="Cart-block Cart-block_row">
-                <div class="Cart-block Cart-block_info">
-                  <div class="Cart-author"><a href="#">Борис Васильевич Маяковский</a>
+                  <div class="Cart-price" th:if="${book.discountPrice!=0}" th:text="${book.discountPrice}">100 р.
                   </div>
-                  <div class="Cart-title"><a href="#">Трубы</a>
-                  </div>
-                  <div class="Cart-rating"><span class="Rating"><span class="Rating-stars"><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span></span></span>
-                  </div>
-                  <div class="Cart-buttons">
-                    <div class="Cart-btn">
-                      <button class="btn btn_primary btn_outline" data-sendstatus="CART" data-bookid="[1133]"><span class="btn-icon"><img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></span><span class="btn-content">Купить</span>
-                      </button>
-                    </div>
-                    <div class="Cart-btn">
-                      <button class="btn btn_danger btn_outline" data-sendstatus="UNLINK" data-bookid="[1133]"><span class="btn-icon"><img src="/assets/img/icons/trash.svg" alt="trash.svg"/></span><span class="btn-content">Удалить</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <div class="Cart-block Cart-block_price">
-                  <div class="Cart-priceTitle">Цена:
-                  </div>
-                  <div class="Cart-price Cart-price_old">150 р.
-                  </div>
-                  <div class="Cart-price">100 р.
-                  </div>
-                  <div class="Cart-sale">-30%
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="Cart-product">
-            <div class="Cart-block Cart-block_row">
-              <div class="Cart-block Cart-block_pict"><a class="Cart-pict" href="#"><img class="Cart-img" src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-              </div>
-              <div class="Cart-block Cart-block_row">
-                <div class="Cart-block Cart-block_info">
-                  <div class="Cart-author"><a href="#">Борис Васильевич Бедный</a>
-                  </div>
-                  <div class="Cart-title"><a href="#">Жизнь</a>
-                  </div>
-                  <div class="Cart-rating"><span class="Rating"><span class="Rating-stars"><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star Rating-star_view">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span><span class="Rating-star">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="19" height="18" viewBox="0 0 19 18">
-                            <g>
-                              <g>
-                                <path fill="#ffc000" d="M9.5 14.925L3.629 18l1.121-6.512L0 6.875l6.564-.95L9.5 0l2.936 5.925 6.564.95-4.75 4.613L15.371 18z"></path>
-                              </g>
-                            </g>
-                          </svg></span></span></span>
-                  </div>
-                  <div class="Cart-buttons">
-                    <div class="Cart-btn">
-                      <button class="btn btn_primary btn_outline" data-sendstatus="CART" data-bookid="[1111]"><span class="btn-icon"><img src="/assets/img/icons/shopping-basket.svg" alt="shopping-basket.svg"/></span><span class="btn-content">Купить</span>
-                      </button>
-                    </div>
-                    <div class="Cart-btn">
-                      <button class="btn btn_danger btn_outline" data-sendstatus="UNLINK" data-bookid="[1111]"><span class="btn-icon"><img src="/assets/img/icons/trash.svg" alt="trash.svg"/></span><span class="btn-content">Удалить</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <div class="Cart-block Cart-block_price">
-                  <div class="Cart-priceTitle">Цена:
-                  </div>
-                  <div class="Cart-price Cart-price_old">254 р.
-                  </div>
-                  <div class="Cart-price">180 р.
-                  </div>
-                  <div class="Cart-sale">-30%
+                  <div class="Cart-sale" th:text="${'-' + book.discount} + #{topbar.discount}">-30%
                   </div>
                 </div>
               </div>
