--- a/MyBookShopAPP/src/main/resources/frontend/signin.html
+++ b/MyBookShopAPP/src/main/resources/frontend/signin.html
@@ -28,8 +28,8 @@
   <link rel="stylesheet" href="/assets/css/extra.min.css?v=27449092"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script defer src="/assets/js/scripts.min.js?v=27449092"></script>
-  <meta id="_csrf" name="_csrf" th:content="${_csrf.token}">
-  <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}">
+<!--  <meta id="_csrf" name="_csrf" th:content="${_csrf.token}">-->
+<!--  <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}">-->
 </head>
 <body class="Site">
   <!--if lt IE 8
@@ -58,6 +58,7 @@
               <div class="form-group">
                 <label class="form-label Login-title">Введите e-mail или телефон
                   <br>
+
                   <span th:if="${regOk}">Регистрация прошла успешно!!!</span>
                 </label>
               </div>
@@ -112,8 +113,14 @@
                 </button>
               </div>
             </div>
-            <div class="form-group form-group_center"><a class="Login-reg" th:href="@{/signup}"
-                                                         href="/signup.html">Зарегистрироваться</a>
+            <div class="form-group form-group_center">
+              <a class="Login-reg" th:href="@{/signup}"
+                                                         href="/signup.html">Зарегистрироваться
+              </a>
+
+            </div>
+            <div class="form-group form-group_center"><a class="Login-reg" th:href="@{/oauth2/authorization/facebook}"
+                                                         href="/signup.html">Войти с Facebook</a>
             </div>
           </div>
         </form>
